more updating environemnt variables

--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -1,20 +1,6 @@
 version: 2.1
 
 jobs:
-  setupEnvironmentVariables:
-    docker:
-      - image: broadinstitute/gatk:gatkbase-2.0.3
-    steps:
-      - run:
-          name: Setup Environment Variables
-          command: |
-            echo 'export GRADLE_OPTS="-Xmx2048m -Dorg.gradle.daemon=false"' >> $BASH_ENV
-            echo 'export HELLBENDER_TEST_INPUTS=gs://hellbender/test/resources/' >> $BASH_ENV
-            echo 'export HELLBENDER_TEST_STAGING=gs://hellbender-test-logs/staging/' >> $BASH_ENV
-            echo 'export HELLBENDER_TEST_LOGS=/hellbender-test-logs/build_reports/' >> $BASH_ENV
-            echo 'export HELLBENDER_TEST_PROJECT=broad-dsde-dev' >> $BASH_ENV
-            echo 'export HELLBENDER_JSON_SERVICE_ACCOUNT_KEY=servicekey.json' >> $BASH_ENV
-
   downloadLFSFiles:
     description: "Download the LFS files and save them to the workspace"
     docker:
@@ -77,6 +63,8 @@ jobs:
             - docker.tar
             - testJars
             - dockertest.gradle
+
+
   runStandardTests:
     description: "Run one of our standard test groups"
     parameters:
@@ -95,6 +83,13 @@ jobs:
   runTestInDocker:
     description: "Run tests in the prebuilt docker"
     machine: true
+    environment:
+      GRADLE_OPTS: -Xmx2048m -Dorg.gradle.daemon=false
+      HELLBENDER_TEST_INPUTS: gs://hellbender/test/resources/
+      HELLBENDER_TEST_STAGING: gs://hellbender-test-logs/staging/
+      HELLBENDER_TEST_LOGS: /hellbender-test-logs/build_reports/
+      HELLBENDER_TEST_PROJECT: broad-dsde-dev
+      HELLBENDER_JSON_SERVICE_ACCOUNT_KEY: servicekey.json
     parameters:
       test-type:
         type: env_var_name
@@ -108,6 +103,7 @@ jobs:
       - run:
           description: "Run the tests"
           command: |
+            echo ${GRADLE_OPTS}
             export TEST_TYPE="${<< parameters.test-type >>}"
             echo ${TEST_TYPE}
             sudo mkdir -p build/reports/
@@ -122,13 +118,8 @@ jobs:
 workflows:
   build:
     jobs:
-      - setupEnvironmentVariables
-      - buildDocker:
-          requires:
-            - setupEnvironmentVariables
-      - downloadLFSFiles:
-          requires:
-            - setupEnvironmentVariables
+      - buildDocker
+      - downloadLFSFiles
       - runTestInDocker:
           test-type: unit
           requires:
