--- a/.gitignore
+++ b/.gitignore
@@ -8,4 +8,5 @@ trained_models/*
 recipes_output/*
 .ipynb_checkpoints
 tensorize/tensorize/__pycache__/*
+tensorize/tensorize/database/__pycache__/*
 tensorize/ml_tensorize.egg-info/
