--- a/build.gradle
+++ b/build.gradle
@@ -66,13 +66,13 @@ final hadoopVersion = System.getProperty('hadoop.version', '2.8.2')
 final disqVersion = System.getProperty('disq.version','0.3.0')
 final genomicsdbVersion = System.getProperty('genomicsdb.version','1.0.1')
 final bigQueryVersion = System.getProperty('bigQuery.version', '1.69.0')
-final guavaVersion = System.getProperty('guava.version', '19.0')
+final guavaVersion = System.getProperty('guava.version', '27.1-jre')
 final testNGVersion = '6.11'
 
 // Using the shaded version to avoid conflicts between its protobuf dependency
 // and that of Hadoop/Spark (either the one we reference explicitly, or the one
 // provided by dataproc).
-final googleCloudNioDependency = 'com.google.cloud:google-cloud-nio:0.87.0-alpha:shaded'
+final googleCloudNioDependency = 'com.google.cloud:google-cloud-nio:0.87.0-alpha'
 
 final baseJarName = 'gatk'
 final secondaryBaseJarName = 'hellbender'
