--- a/env/ml4cvd_dataflow.yml
+++ b/env/ml4cvd_dataflow.yml
@@ -1,4 +1,5 @@
-# Minimal set of packages to tensorize using Dataflow on OSX-64
+# Minimal set of packages to tensorize using Dataflow (tested on OSX-64)
+# To be used to create the Python env on which to pip freeze to create the requirements file for Dataflow
 
 name: ml4cvd_dataflow
 channels:
