--- a/build.gradle
+++ b/build.gradle
@@ -677,6 +677,9 @@ task gatkTabComplete(type: Javadoc, dependsOn: classes) {
     source = sourceSets.main.allJava + files(configurations.externalSourceConfiguration.collect { zipTree(it) })
     include '**/*.java'
 
+    // TODO: temporary hack until we move Picard to a non-shaded google-cloud-nio version
+    exclude '**/GoogleStorageUtils.java'
+
     // The gatkDoc process instantiates any documented feature classes, so to run it we need the entire
     // runtime classpath, as well as jdk javadoc files such as tools.jar, where com.sun.javadoc lives, and Picard.
     classpath = sourceSets.main.runtimeClasspath + javadocJDKFiles
