Evoquer: a BigQuery-based joint calling tool
Fix genotype allele remapping issue

Set samplesAreUniquified = false in ref confidence merger to avoid sample name mangling

Add a hack to skip sites with the wrong number of values in allele-specific annotations

This is necessary to work with our current test datasets

More robust hack to deal with malformed allele-specific annotations

evoquer.sh improvements

Handle missing values (".") in AS_QualByDepth

Add additional VCF header line declarations required by the GnarlyGenotyper

Avoid potential NPE in onShutdown()

Update test dataset name

Keep the NON_REF allele during merging when running the GnarlyGenotyper

Comment out empty annotations in GnarlyGenotyper

Updates to evoquer.wdl

Add clarification about removal of NON_REF allele

More evoquer.wdl updates

Support raw precomputed AVRO inputs

Add a --run-query-in-batch-mode argument

More WDL updates

Add WDLs

Set PIPELINE_MAX_ALT_COUNT to 50 in the GnarlyGenotyper to work around an IndexOutOfBoundsException

dalio run 2 WDL settings

Switch to 'evoquer_dalio40k_july_updated_dataset_map'

Replace USING with ON in the main query, and adjust WHERE clause for better query performance

GnarlyGenotyperEngine: create GenotypeLikelihoodCalculators on-the-fly when there are too many alleles

Add dalio WDL + supporting files to scripts/unsupported/evoquer

Update WDL to use clustered versions of the dalio tables

Remove old WDL directory to avoid potential confusion

Revert "Replace USING with ON in the main query, and adjust WHERE clause for better query performance"

This reverts commit 80e51401e26d3603fa55a32267e0ec4a7c61100e.

Switch to the latest gatk/master version of the GnarlyGenotyper

Switch back to shaded NIO classes

added optimized query

Andrea bug fix: don't reuse Avro records in Storage API

evoquer integration tests

Remove temporary seenPositions hack from the EvoquerEngine

Fix some failing tests

Fix post-rebase breakage

fix for jackson dependency 

--- a/.travis.yml
+++ b/.travis.yml
@@ -21,6 +21,7 @@ env:
   - SCALA_VERSION=2.11 RUN_CNN_WDL=true TESTS_REQUIRE_GCLOUD=true
   global:
   #gradle needs this
+  - NO_GCE_CHECK=true
   - TERM=dumb
   #limit gradle jvm memory and disable daemon
   - GRADLE_OPTS="-Xmx2048m -Dorg.gradle.daemon=false"
