--- a/build.gradle
+++ b/build.gradle
@@ -65,7 +65,10 @@ final sparkVersion = System.getProperty('spark.version', '2.4.3')
 final hadoopVersion = System.getProperty('hadoop.version', '2.8.2')
 final disqVersion = System.getProperty('disq.version','0.3.3')
 final genomicsdbVersion = System.getProperty('genomicsdb.version','1.1.0.1')
+final bigQueryVersion = System.getProperty('bigQuery.version', '1.69.0')
+final guavaVersion = System.getProperty('guava.version', '27.1-jre')
 final testNGVersion = '6.11'
+
 // Using the shaded version to avoid conflicts between its protobuf dependency
 // and that of Hadoop/Spark (either the one we reference explicitly, or the one
 // provided by dataproc).
@@ -148,11 +151,11 @@ ensureBuildPrerequisites(requiredJavaVersion, largeResourcesFolder, buildPrerequ
 configurations.all {
     resolutionStrategy {
         // the snapshot folder contains a dev version of guava, we don't want to use that.
-        force 'com.google.guava:guava:18.0'
+        force 'com.google.guava:guava:' + guavaVersion
         // force the htsjdk version so we don't get a different one transitively
         force 'com.github.samtools:htsjdk:' + htsjdkVersion
         // later versions explode Hadoop
-        force 'com.google.protobuf:protobuf-java:3.0.0-beta-1'
+        force 'com.google.protobuf:protobuf-java:3.8.0-rc-1'
         // force testng dependency so we don't pick up a different version via GenomicsDB
         force 'org.testng:testng:' + testNGVersion
         force 'org.broadinstitute:barclay:' + barclayVersion
@@ -235,11 +238,14 @@ dependencies {
         exclude module: 'protobuf-java'
     }
     compile 'com.opencsv:opencsv:3.4'
-    compile 'com.google.guava:guava:18.0'
+    compile 'com.google.guava:guava:' + guavaVersion
     compile 'com.github.samtools:htsjdk:'+ htsjdkVersion
     compile(googleCloudNioDependency) {
         transitive = false
     }
+
+    compile 'com.google.cloud:google-cloud-bigquery:' + bigQueryVersion
+    compile 'com.google.cloud:google-cloud-bigquerystorage:0.92.0-beta'
 
     compile "gov.nist.math.jama:gov.nist.math.jama:1.1.1"
 
