--- a/build.gradle
+++ b/build.gradle
@@ -14,7 +14,7 @@ plugins {
     id 'signing'
     id "jacoco"
     id "de.undercouch.download" version "2.1.0" //used for downloading GSA lib
-    id "com.github.johnrengelman.shadow" version "1.2.3"    //used to build the shadow and sparkJars
+    id "com.github.johnrengelman.shadow" version "5.0.0"    //used to build the shadow and sparkJars
     id "com.github.ben-manes.versions" version "0.12.0" //used for identifying dependencies that need updating
     id 'com.palantir.git-version' version '0.5.1' //version helper
 }
@@ -391,8 +391,8 @@ tasks.withType(Jar) {
     }
 }
 
-task wrapper(type: Wrapper) {
-    gradleVersion = '3.1'
+wrapper {
+    gradleVersion = '5.4.1'
 }
 
 tasks.withType(ShadowJar) {
@@ -511,7 +511,7 @@ jacocoTestReport {
 
     group = "Reporting"
     description = "Generate Jacoco coverage reports after running tests."
-    additionalSourceDirs = files(sourceSets.main.allJava.srcDirs)
+    getAdditionalSourceDirs().from(sourceSets.main.allJava.srcDirs)
 
     reports {
         xml.enabled = true
@@ -718,7 +718,6 @@ task gatkTabComplete(type: Javadoc, dependsOn: classes) {
  *This specifies what artifacts will be built and uploaded when performing a maven upload.
  */
 artifacts {
-    archives jar
     archives javadocJar
     archives sourcesJar
     archives testUtilsJar
