--- a/build.gradle
+++ b/build.gradle
@@ -61,7 +61,7 @@ final requiredJavaVersion = "8"
 final htsjdkVersion = System.getProperty('htsjdk.version','2.19.0')
 final picardVersion = System.getProperty('picard.version','2.19.0')
 final barclayVersion = System.getProperty('barclay.version','2.1.0')
-final sparkVersion = System.getProperty('spark.version', '2.2.0')
+final sparkVersion = System.getProperty('spark.version', '2.4.3')
 final hadoopVersion = System.getProperty('hadoop.version', '2.8.2')
 final disqVersion = System.getProperty('disq.version','0.3.1')
 final genomicsdbVersion = System.getProperty('genomicsdb.version','1.0.4')
@@ -156,6 +156,7 @@ configurations.all {
         // force testng dependency so we don't pick up a different version via GenomicsDB
         force 'org.testng:testng:' + testNGVersion
         force 'org.broadinstitute:barclay:' + barclayVersion
+        force 'com.twitter:chill_2.11:0.8.1'
 
         // make sure we don't pick up an incorrect version of the GATK variant of the google-nio library
         // via Picard, etc.
