--- a/.travis.yml
+++ b/.travis.yml
@@ -86,10 +86,10 @@ before_install:
    sudo mkdir -p site-library;
    sudo ln -sFv ~/site-library /usr/local/lib/R/site-library;
    sudo apt-key adv --keyserver keyserver.ubuntu.com --recv-keys E298A3A825C0D65DFD57CBB651716619E084DAB9;
-   sudo add-apt-repository "deb http://cran.rstudio.com/bin/linux/ubuntu trusty/";
+   sudo add-apt-repository "deb https://cloud.r-project.org/bin/linux/ubuntu trusty/";
    sudo apt-get update;
-   sudo apt-get install -y --force-yes r-base-dev=3.2.5-1trusty;
-   sudo apt-get install -y --force-yes r-base-core=3.2.5-1trusty;
+   sudo apt-get install -y --force-yes r-base-dev=3.2.5-1trusty0;
+   sudo apt-get install -y --force-yes r-base-core=3.2.5-1trusty0;
    sudo Rscript scripts/docker/gatkbase/install_R_packages.R;
   fi;
 # Download Cromwell jar -- if you change the version, please change the CROMWELL_JAR env variable above, too.
