--- a/.travis.yml
+++ b/.travis.yml
@@ -101,6 +101,10 @@ before_install:
 - git lfs install
 - git lfs fetch
 - git lfs checkout
+# Disable services enabled by default to free a bit of memory
+# http://docs.travis-ci.com/user/database-setup/#MySQL
+- sudo /etc/init.d/mysql stop
+- sudo /etc/init.d/postgresql stop
 install:
 - if [[ $TRAVIS_SECURE_ENV_VARS == false && $TEST_TYPE == cloud ]]; then
     echo "Can't run cloud tests without keys so don't bother building";
