--- a/build.gradle
+++ b/build.gradle
@@ -59,7 +59,7 @@ repositories {
 
 final requiredJavaVersion = "8"
 final htsjdkVersion = System.getProperty('htsjdk.version','2.19.0')
-final picardVersion = System.getProperty('picard.version','2.20.4-5-g04faa95-SNAPSHOT')
+final picardVersion = System.getProperty('picard.version','2.20.4-12-g801dbf1-SNAPSHOT')
 final barclayVersion = System.getProperty('barclay.version','2.1.0')
 final sparkVersion = System.getProperty('spark.version', '2.2.0')
 final hadoopVersion = System.getProperty('hadoop.version', '2.8.2')
