--- a/build.gradle
+++ b/build.gradle
@@ -28,8 +28,8 @@ final googleCloudNioVersion =  System.getenv('NIO_VERSION') ?:  '0.90.0-alpha:sh
 
 dependencies {
     // This dependency is found on compile classpath of this component and consumers.
-    implementation 'com.google.cloud:google-cloud-nio:' + googleCloudNioVersion; 
-    implementation 'com.google.cloud:google-cloud-core:1.87.1-20190816.172619-1')
+    implementation 'com.google.cloud:google-cloud-nio:' + googleCloudNioVersion 
+    implementation 'com.google.cloud:google-cloud-core:1.87.1-20190816.172619-1'
     // Use TestNG framework, also requires calling test.useTestNG() below
     testImplementation 'org.testng:testng:6.14.3'
 }
