--- a/build.gradle
+++ b/build.gradle
@@ -58,8 +58,9 @@ repositories {
 }
 
 final requiredJavaVersion = "8"
-final htsjdkVersion = System.getProperty('htsjdk.version','2.19.0')
-final picardVersion = System.getProperty('picard.version','2.20.4-12-g801dbf1-SNAPSHOT')
+//final htsjdkVersion = System.getProperty('htsjdk.version','2.19.0')
+final htsjdkVersion = System.getProperty('htsjdk.version', '2.20.2-2-g2a6e2c2-SNAPSHOT')
+final picardVersion = System.getProperty('picard.version','2.20.6-20-gb4677be-SNAPSHOT')
 final barclayVersion = System.getProperty('barclay.version','2.1.0')
 final sparkVersion = System.getProperty('spark.version', '2.4.3')
 final hadoopVersion = System.getProperty('hadoop.version', '2.8.2')
