--- a/build.gradle
+++ b/build.gradle
@@ -59,8 +59,8 @@ repositories {
 
 final requiredJavaVersion = "8"
 //final htsjdkVersion = System.getProperty('htsjdk.version','2.19.0')
-final htsjdkVersion = System.getProperty('htsjdk.version', '2.20.2-2-g2a6e2c2-SNAPSHOT')
-final picardVersion = System.getProperty('picard.version','2.20.6-20-gb4677be-SNAPSHOT')
+final htsjdkVersion = System.getProperty('htsjdk.version', '2.20.3')
+final picardVersion = System.getProperty('picard.version','2.20.6-21-g05e323c-SNAPSHOT')
 final barclayVersion = System.getProperty('barclay.version','2.1.0')
 final sparkVersion = System.getProperty('spark.version', '2.4.3')
 final hadoopVersion = System.getProperty('hadoop.version', '2.8.2')
