--- a/.travis.yml
+++ b/.travis.yml
@@ -36,7 +36,7 @@ env:
   - HELLBENDER_TEST_PROJECT=broad-dsde-dev
   - HELLBENDER_JSON_SERVICE_ACCOUNT_KEY=servicekey.json
   #Work around for https://github.com/googleapis/google-cloud-java/issues/5884
-  - export GOOGLE_CLOUD_PROJECT=HELLBENDER_TEST_PROJECT
+  - export GOOGLE_CLOUD_PROJECT=$HELLBENDER_TEST_PROJECT
   #for uploading artifacts
   - ARTIFACTORY_USERNAME=gatkci
   #artifactory password
