Add optimizer option to make_multimodal_to_multilabel_model (#51)
Adds optimizer option using keras default optimizers and RAdam. Also includes Lookahead optimizer.

--- a/env/ml4cvd_osx64.yml
+++ b/env/ml4cvd_osx64.yml
@@ -71,6 +71,7 @@ dependencies:
       - keras==2.2.4
       - keras-applications==1.0.6
       - keras-preprocessing==1.0.5
+      - keras-rectified-adam==0.10.0
       - markdown==2.6.9
       - markupsafe==1.0
       - matplotlib==2.1.0
