--- a/build.gradle
+++ b/build.gradle
@@ -59,7 +59,7 @@ repositories {
 
 final requiredJavaVersion = "8"
 final htsjdkVersion = System.getProperty('htsjdk.version','2.20.3')
-final picardVersion = System.getProperty('picard.version','2.20.6-5-g1b4178f-SNAPSHOT')
+final picardVersion = System.getProperty('picard.version','2.20.7')
 final barclayVersion = System.getProperty('barclay.version','2.1.0')
 final sparkVersion = System.getProperty('spark.version', '2.4.3')
 final hadoopVersion = System.getProperty('hadoop.version', '2.8.2')
