Updating google cloud nio to 0.107.0 (#6042)
* Updating google-cloud-nio  0.81.0-alpha:shaded -> 0.107.0-alpha:shaded
* Update picard version 2.20.5 -> 2.20.7
* Fixes #5935 
* Exclude transitive dependencies from shaded dependencies.  The shaded poms seem to include copies of the dependencies that were shaded which means we get multiple confusing copies of the same class.  
* Added a workaround on travis https://github.com/googleapis/google-cloud-java/issues/5884, an issue introduced in gcloud 0.90.0-alpha.  This required redundantly specifying the google project through an environment variable in addition to logging in.

--- a/.travis.yml
+++ b/.travis.yml
@@ -35,6 +35,8 @@ env:
   - HELLBENDER_TEST_LOGS=/hellbender-test-logs/build_reports/
   - HELLBENDER_TEST_PROJECT=broad-dsde-dev
   - HELLBENDER_JSON_SERVICE_ACCOUNT_KEY=servicekey.json
+  #Work around for https://github.com/googleapis/google-cloud-java/issues/5884
+  - export GOOGLE_CLOUD_PROJECT=$HELLBENDER_TEST_PROJECT
   #for uploading artifacts
   - ARTIFACTORY_USERNAME=gatkci
   #artifactory password
