--- a/build.gradle
+++ b/build.gradle
@@ -59,7 +59,7 @@ repositories {
 
 final requiredJavaVersion = "8"
 final htsjdkVersion = System.getProperty('htsjdk.version','2.20.3')
-final picardVersion = System.getProperty('picard.version','2.20.5')
+final picardVersion = System.getProperty('picard.version','2.20.7')
 final barclayVersion = System.getProperty('barclay.version','2.1.0')
 final sparkVersion = System.getProperty('spark.version', '2.4.3')
 final hadoopVersion = System.getProperty('hadoop.version', '2.8.2')
@@ -69,7 +69,7 @@ final testNGVersion = '6.11'
 // Using the shaded version to avoid conflicts between its protobuf dependency
 // and that of Hadoop/Spark (either the one we reference explicitly, or the one
 // provided by dataproc).
-final googleCloudNioDependency = 'com.google.cloud:google-cloud-nio:0.81.0-alpha:shaded'
+final googleCloudNioDependency = 'com.google.cloud:google-cloud-nio:0.107.0-alpha:shaded'
 
 final baseJarName = 'gatk'
 final secondaryBaseJarName = 'hellbender'
@@ -237,7 +237,9 @@ dependencies {
     compile 'com.opencsv:opencsv:3.4'
     compile 'com.google.guava:guava:18.0'
     compile 'com.github.samtools:htsjdk:'+ htsjdkVersion
-    compile googleCloudNioDependency
+    compile(googleCloudNioDependency) {
+        transitive = false
+    }
 
     compile "gov.nist.math.jama:gov.nist.math.jama:1.1.1"
 
@@ -314,7 +316,9 @@ dependencies {
     }
 
     // Dependency change for including MLLib
-    compile('com.esotericsoftware:reflectasm:1.10.0:shaded')
+    compile('com.esotericsoftware:reflectasm:1.10.0:shaded') {
+        transitive = false
+    }
 
     compile('com.intel.gkl:gkl:0.8.6') {
         exclude module: 'htsjdk'
