update base image to use ubuntu 19.04

--- a/scripts/docker/gatkbase/Dockerfile
+++ b/scripts/docker/gatkbase/Dockerfile
@@ -1,6 +1,6 @@
 # Using OpenJDK 8
 # This Dockerfile does not require any files that are in the GATK4 repo.
-FROM ubuntu:16.04
+FROM ubuntu:19.04
 
 #### Basic image utilities
 RUN apt-get update && \
@@ -43,12 +43,13 @@ ENV JAVA_HOME /usr/lib/jvm/java-8-openjdk-amd64/
 
 RUN java -version
 
+ARG DEBIAN_FRONTEND=noninteractive
 RUN apt-key adv --keyserver keyserver.ubuntu.com --recv-keys E298A3A825C0D65DFD57CBB651716619E084DAB9 && \
-    add-apt-repository "deb http://cran.rstudio.com/bin/linux/ubuntu xenial/" && \
+    add-apt-repository "deb http://cran.rstudio.com/bin/linux/ubuntu disco-cran35/" && \
     apt-get update && \
-    apt-get install -y --force-yes \
-        r-base-dev=3.2.5-1xenial \
-        r-base-core=3.2.5-1xenial && \
+    apt-get install -y \
+        r-base-dev=3.6.1-3disco \
+        r-base-core=3.6.1-3disco && \
     apt-get -y clean && \
     apt-get -y autoremove && \
     apt-get  -y autoclean
