--- a/build.gradle
+++ b/build.gradle
@@ -60,7 +60,7 @@ repositories {
 final requiredJavaVersion = "8"
 //final htsjdkVersion = System.getProperty('htsjdk.version','2.19.0')
 final htsjdkVersion = System.getProperty('htsjdk.version', '2.20.3')
-final picardVersion = System.getProperty('picard.version','2.20.7-4-g9d9f336-SNAPSHOT')
+final picardVersion = System.getProperty('picard.version','2.20.7-16-gc9bde8e-SNAPSHOT')
 final barclayVersion = System.getProperty('barclay.version','2.1.0')
 final sparkVersion = System.getProperty('spark.version', '2.4.3')
 final hadoopVersion = System.getProperty('hadoop.version', '2.8.2')
