--- a/build.gradle
+++ b/build.gradle
@@ -60,9 +60,9 @@ repositories {
 final htsjdkVersion = System.getProperty('htsjdk.version','2.20.3')
 final picardVersion = System.getProperty('picard.version','2.21.1')
 final barclayVersion = System.getProperty('barclay.version','2.1.0')
-final sparkVersion = System.getProperty('spark.version', '2.4.3')
+final sparkVersion = System.getProperty('spark.version', '2.4.4')
 final scalaVersion = System.getProperty('scala.version', '2.11')
-final hadoopVersion = System.getProperty('hadoop.version', '2.8.2')
+final hadoopVersion = System.getProperty('hadoop.version', '3.2.1')
 final disqVersion = System.getProperty('disq.version','0.3.3')
 final genomicsdbVersion = System.getProperty('genomicsdb.version','1.1.0.1')
 final bigQueryVersion = System.getProperty('bigQuery.version', '1.69.0')
@@ -267,7 +267,7 @@ dependencies {
     // this comes built-in when running on Google Dataproc, but the library
     // allows us to read from GCS also when testing locally (or on non-Dataproc clusters,
     // should we want to)
-    compile 'com.google.cloud.bigdataoss:gcs-connector:1.6.3-hadoop2'
+    compile 'com.google.cloud.bigdataoss:gcs-connector:1.9.4-hadoop3'
 
     compile 'org.apache.logging.log4j:log4j-api:2.3'
     compile 'org.apache.logging.log4j:log4j-core:2.3'
@@ -357,6 +357,7 @@ dependencies {
 
     // natural sort
     compile('net.grey-panther:natural-comparator:1.1')
+    compile('com.fasterxml.jackson.module:jackson-module-scala_2.11:2.9.8')
 
     testUtilsCompile sourceSets.main.output
     testUtilsCompile 'org.testng:testng:' + testNGVersion
