Update Barclay version.

--- a/build.gradle
+++ b/build.gradle
@@ -63,7 +63,7 @@ repositories {
 
 final htsjdkVersion = System.getProperty('htsjdk.version','2.21.2')
 final picardVersion = System.getProperty('picard.version','2.21.9')
-final barclayVersion = System.getProperty('barclay.version','2.1.0')
+final barclayVersion = System.getProperty('barclay.version','2.1.0-4-g7e56d72-SNAPSHOT')
 final sparkVersion = System.getProperty('spark.version', '2.4.3')
 final scalaVersion = System.getProperty('scala.version', '2.11')
 final hadoopVersion = System.getProperty('hadoop.version', '2.8.2')
